# rayxiv3

./: .gitignore  CLAUDE.md  pyproject.toml  run_hlr_only.py  run_spec.py  run_spec_legacy.py  run_to_dag.py  run_to_dlr.py  run_to_impact.py  run_to_mlr.py
.cache/web_search/: web_0c1420b25caac72a.txt  web_135eb937d23002d6.txt  web_7b266bec1b55391b.txt  web_7e0f25813b4b24ff.txt  web_b06d50d070f39e67.txt  web_fa3628350703e324.txt
games/templates/card_game/: export_presets.cfg  project.godot  template.json
knowledge/design_principles/: game_defaults.md
knowledge/games/: mario_kart.json  street_fighter_2.json
knowledge/genres/: 2d_fighter.md  kart_racer.md
knowledge/mechanic_templates/: 2d_fighter.json  2d_fighter_3level.json  2d_fighter_dlt.json  2d_fighter_hlt.json  2d_fighter_mlt.json
knowledge/process/: mario_kart_process.md  street_fighter_2_process.md
knowledge/watchouts/: all_games_watchouts.md  card_game_watchouts.md  fighter_watchouts.md  kart_racer_watchouts.md
scripts/: build_game.py  capture_sf2_rage_traces.py  gen_fighter_assets.py  gen_ryu_sprites.py  group_hlis.py  patch_sf2_rage_with_mechanic.py  restructure_template.py  split_template.py  update_template.py  verify_template_restructure.py
src/rayxi/: logging_setup.py
src/rayxi/api/: __init__.py  app.py  config.py
src/rayxi/knowledge/: __init__.py  knowledge_base.py  mechanic_loader.py
src/rayxi/llm/: __init__.py  callers.py  image_gen.py  (+3 more)
web/static/: app.js  chat.css  chat.js  gallery.css  gallery.js  style.css
web/templates/: chat.html  gallery.html  index.html  studio.html
(+63 files in other folders)
