[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rayxi"
version = "3.0.0"
description = "RayXI v3 — Spec Drill-Down, Atomic Build, Compile-Verify"
requires-python = ">=3.11"
dependencies = [
    "einops>=0.8.2",
    "httpx>=0.27",
    "nltk>=3.9.4",
    "peft>=0.18.1",
    "pydantic>=2.12.5",
    "sentence-transformers>=5.4.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.15.9"]

[tool.hatch.build.targets.wheel]
packages = ["src/rayxi"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501", "B008", "SIM108"]

[tool.ruff.lint.isort]
known-first-party = ["rayxi"]
